# FlameUI

./: .gitignore  .gitmodules  CMakeLists.txt  FLAMEUI.todo  README.md  TexturedQuad.spv  TexturedQuad.vert
CMake/Utils/: Dependencies.cmake
CMakeUtils/: CMakeUtils.cmake  Dependencies.cmake
FlameUI/: CMakeLists.txt
FlameUI/resources/shaders/: Font.glsl  Quad.glsl
FlameUI/src/: Batch.cpp  Batch.h  Button.cpp  Button.h  Core.h  Dockspace.cpp  Dockspace.h  EventPipeline.cpp  EventPipeline.h  FlameUI.cpp  FlameUI.h  Font.h  Log.cpp  Panel.cpp  Panel.h  Pipeline.cpp  Pipeline.h  Renderer.cpp  Renderer.h  Timer.cpp  Timer.h  UIElement.h  Vertex.h  core_macros.h  opengl_debug.h  opengl_helper_funcs.h  opengl_math_types.h
FlameUI/src/core/: Core.h  ElementTypeIndex.h  Input.cpp  Input.h
FlameUI/src/fby_logger/: fby_logger.h
FlameUI/src/flameberrylogger/: example.cpp  fby_logger.h
FlameUI/src/flamelogger/: flamelogger.cpp  flamelogger.h
FlameUI/src/renderer/: Batch.cpp  Batch.h  Framebuffer.cpp  Framebuffer.h  Renderer.cpp  Renderer.h
FlameUI/src/ui/: Button.cpp  Button.h  DockingSystem.cpp  DockingSystem.h  Dockspace.cpp  Dockspace.h  EventPipeline.cpp  EventPipeline.h  Panel.cpp  Panel.h  Pipeline.cpp  Pipeline.h  Text.cpp  Text.h
FlameUI/src/utils/: Log.h  Timer.cpp  Timer.h
Sandbox/: CMakeLists.txt
Sandbox/src/: FlameUILayer.cpp  FlameUILayer.h  SandboxApp.cpp  SandboxApp.h  Window.cpp  Window.h  main.cpp  umm.cpp  umm.h
Sandbox/src/examples/: Example_01.cpp  Example_02_FontRendering.cpp
scripts/: Dependencies.py  makefile_gen.py  windows_setup.py  xcode_gen.py
